# bsdiff-android

./: Cargo.toml  README.md
src/: bsdf2.rs  bsdf2_writer.rs  diff.rs  lib.rs  patch.rs
tests/: test.rs
