[package]
name = "bsdiff-android"
version = "0.0.1"
authors = ["pieterjan.briers@gmail.com", "Kornel <kornel@geekhood.net>", "rhythmcache"]
description = "BSDIFF / BSDF2 implementation compatible with Android OTA payloads"
readme = "README.md"
categories = ["compression"]
keywords = ["bspatch", "patch", "diff", "delta", "binary"]
license = "BSD-2-Clause"
homepage = "https://github.com/rhythmcache/bsdiff-android"
repository = "https://github.com/rhythmcache/bsdiff-android"
edition = "2021"
include = ["src/*.rs", "LICENSE", "README.md", "Cargo.toml"]
rust-version = "1.59"

[dev-dependencies]
smallvec = { version = "1.15.0", features = ["write"] }

[dependencies]
brotli = "8.0.2"
bzip2 = { version = "0.6.1", features = ["static"] }
